<resources>
    <string name="app_name">PierdeloApp</string>
    <string name="screen1Title">Piérdelo\'ya Hoşgeldiniz,</string>
    <string name="screen1Desc">Şimdi Alışverişe Başla!</string>
    <string name="screenNone"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">Ayarlar</string>
    <string name="payment_title">Ödeme Şekli</string>
    <string name="order_title">Siparişlerim</string>
    <string name="order_title_two">Teslim Edilen</string>
    <string name="start_shopping_title">Alışverişe Başla</string>
    <string name="next_title">İlerle</string>
    <string name="items_title">Ürünler</string>
    <string name="information_title">Hesap Bilgileri</string>
    <string name="detail_product_title">Ürün</string>
    <string name="price_format">%s₺</string>
    <string name="cart_title">Sepetim</string>
    <string name="address_title">Teslimat Adresi</string>
    <string name="add_address_title">Yeni Adres Ekleyin"</string>
    <string name="toast_address_deleted">Adres Silindi</string>
    <string name="toast_address_deleted_error">Adres silinirken hata oluştu</string>
    <string name="toast_cart_deleted">Kaldırılıyor</string>
    <string name="add_address_activity">Adres Eklendi</string>
    <string name="add_address_activity_error">Adres eklenirken hata oluştu</string>
    <string name="toast_change_password_error">Bir şeyler yanlış gitti! Kullanıcı ayrıntıları mevcut değil</string>
    <string name="toast_change_password_need">Şifre gerekli</string>
    <string name="toast_change_password_verified">Şifre doğrulandı</string>
    <string name="toast_change_password_now">Şimdi şifreyi değiştir</string>
    <string name="toast_new_password">Yeni şifre gerekli</string>
    <string name="toast_new_password_confirm">Lütfen yeni şifrenizi onaylayın</string>
    <string name="toast_password_match">Parola eşleşmedi</string>
    <string name="toast_password_old_new">Yeni şifre eski şifreyle aynı olamaz</string>
    <string name="toast_password_has_been_changed">Şifre değiştirildi</string>
    <string name="set_new_password">Lütfen yeni şifrenizi giriniz</string>
    <string name="set_new_password_again">Lütfen yeni şifrenizi tekrar giriniz</string>
    <string name="set_new_password_renter">Lütfen aynı şifreyi tekrar giriniz</string>
    <string name="set_new_password_authenticate">Kimlik doğrulamak için lütfen mevcut şifrenizi girin</string>
    <string name="detail_activity_add_cart">Ürün Sepete Eklendi</string>
    <string name="forgot_activity_enter_email">Lütfen kayıtlı e-postanızı girin</string>
    <string name="forgot_activity_enter_email_valid">Lütfen geçerli e-posta adresini giriniz</string>
    <string name="forgot_activity_email_req">Email gereklidir</string>
    <string name="forgot_activity_email_box">Lütfen şifre sıfırlamak için gelen kutunuzu kontrol edin</string>
    <string name="forgot_activity_home_page">Anasayfaya yönlendiriliyorsunuz..</string>
    <string name="forgot_activity_user_error">Kullanıcı mevcut değil veya artık geçerli değil. Lütfen tekrar kayıt olun</string>
    <string name="forgot_activity_something">Bir şeyler yanlış gitti!</string>
    <string name="information_activity_error">Bir şeyler yanlış gitti! Kullanıcı ayrıntıları şu anda mevcut değil</string>
    <string name="information_activity_something">Bir şeyler yanlış gitti!</string>
    <string name="user_profile_activity_error">Bir şeyler yanlış gitti! Kullanıcı ayrıntıları şu anda mevcut değil</string>
    <string name="user_profile_activity_log_out">Çıkış yapıldı</string>
    <string name="user_profile_activity_something">Bir şeyler yanlış gitti!</string>
    <string name="register_enter_name">Lütfen kullanıcı adınızı girin</string>
    <string name="register_enter_email">Lütfen E-postanızı girin</string>
    <string name="register_enter_re_mail">Lütfen E-postanızı tekrar girin</string>
    <string name="register_enter_password">Şifrenizi giriniz Lütfen</string>
    <string name="register_password_digit">Şifre en az 6 haneli olmalıdır</string>
    <string name="register_password_confirm">Lütfen girin Şifrenizi onaylayın</string>
    <string name="register_password_same">Lütfen aynı şifre giriniz</string>
    <string name="register_username_req">Kullanıcı adı gerekli</string>
    <string name="register_email_req">Email gerekli</string>
    <string name="register_email_valid">Geçerli e-posta gerekli</string>
    <string name="register_password_req">Şifre gerekli</string>
    <string name="register_password_weak">Şifre çok zayıf</string>
    <string name="register_password_conf">Şifre doğrulaması gerekli</string>
    <string name="register_password_toast_success">Kullanıcı başarıyla kaydoldu, Lütfen e-posta adresinizi doğrulayın</string>
    <string name="register_password_toast_failed">Kullanıcı kaydı başarısız oldu , Lütfen tekrar deneyin</string>
    <string name="register_to_weak_alphabet">Şifren çok zayıf , Lütfen alfabe, sayı ve özel karakterlerden oluşan bir karışım kullanın</string>
    <string name="register_to_email">E-postanız geçersiz veya zaten kullanılıyor. Lütfen tekrar girin</string>
    <string name="register_to_email_with">Kullanıcı bu e-postayla zaten kayıtlı. Başka bir e-posta kullanın</string>
    <string name="login_activity_reset_password">Artık şifrenizi sıfırlayabilirsiniz!</string>
    <string name="login_activity_enter_email">Lütfen E-postanızı girin</string>
    <string name="login_activity_rEnter_email">Lütfen E-postanızı tekrar girin</string>
    <string name="login_activity_enter_password">Lütfen Şifrenizi giriniz</string>
    <string name="login_activity_req_email">Email gereklidir</string>
    <string name="login_activity_req_password">Şifre gereklidir</string>
    <string name="login_activity_req_email_valid">Geçerli e-posta gerekli</string>
    <string name="login_activity_now_log">Şimdi giriş yaptınız</string>
    <string name="login_activity_not_user">Kullanıcı mevcut değil veya artık geçerli değil. Lütfen tekrar kayıt olun</string>
    <string name="login_activity_invalid_user">Geçersiz kimlik bilgileri. Lütfen kontrol edin ve tekrar girin</string>
    <string name="login_activity_logged_in">Zaten giriş yapılmış!</string>
    <string name="login_activity_logged_now">Şimdi giriş yapabilirsiniz</string>
    <string name="xml_name">Şehir</string>
    <string name="xml_address">Adres</string>
    <string name="xml_receiver_name">Alıcının Adı</string>
    <string name="xml_phone">Telefon</string>
    <string name="xml_button_add">Ekle</string>
    <string name="xml_amount_text">Ödenecek Tutar</string>
    <string name="xml_complete_shop_text">Alışverişi Tamamla</string>
    <string name="xml_new_pass_head">Yeni Bir Şifre Belirleyin</string>
    <string name="xml_pass_name">Şifreniz</string>
    <string name="xml_pass_new_name">Yeni Şifreniz</string>
    <string name="xml_pass_new_name_again">Yeni Şifreniz Tekrar</string>
    <string name="xml_pass_change_name">Şifreyi Değiştir"</string>
    <string name="xml_auth_name">Doğrula</string>
    <string name="xml_product_detail">Ürün Detayı</string>
    <string name="xml_body_name">Beden</string>
    <string name="xml_select_name">Adet Seçiniz</string>
    <string name="xml_add_basket">Sepete Ekle</string>
    <string name="xml_buy_name">Satın Al</string>
    <string name="xml_forgot_pass">Şifremi Unuttum</string>
    <string name="xml_forgot_pass_verify">Lütfen Doğrulayın,</string>
    <string name="xml_email_address">E-mail Adresiniz</string>
    <string name="xml_send_link">Linki Gönder</string>
    <string name="xml_search_name">Arama</string>
    <string name="xml_name_surname">Adınız Soyadınız</string>
    <string name="xml_your_name">Adınız</string>
    <string name="xml_your_email">E-Mail</string>
    <string name="xml_reg_name">Kayıt Ol</string>
    <string name="xml_log_name">Oturum Aç</string>
    <string name="xml_welcome">Hoş Geldiniz,</string>
    <string name="xml_forgot_pass_ques">Şifremi Unuttum?</string>
    <string name="xml_other_log">Diğer giriş seçenekleri</string>
    <string name="xml_no_account_name">Hesabın yok mu?</string>
    <string name="xml_reg_log">Kaydol</string>
    <string name="xml_activity_log">Giriş Yap</string>
    <string name="xml_activity_reg">Kayıt Ol</string>
    <string name="xml_nav_late">Geç</string>
    <string name="xml_nav_next">İleri</string>
    <string name="xml_order_name">Siparişlerim</string>
    <string name="xml_delivered_name">Teslim Edilen</string>
    <string name="xml_no_payment_name">Ödeme Yönteminiz Yok</string>
    <string name="xml_new_payment_name">Lütfen yeni bir ödeme yöntemi oluşturun.</string>
    <string name="xml_new_add_payment">Yeni Ödeme Yöntemi Ekle</string>
    <string name="xml_card_number_name">Kart Numarası</string>
    <string name="xml_month_year">Ay/Yıl</string>
    <string name="xml_add_cart_name">Kartı Ekleyin</string>
    <string name="xml_login_name">Giriş Yap</string>
    <string name="xml_again_password">Tekrar Şifreniz</string>
    <string name="xml_account_information_text">Hesap Bilgileri</string>
    <string name="xml_settings_name">Ayarlar</string>
    <string name="xml_no_internet_connect">İnternet Bağlantısı Yok</string>
    <string name="xml_check_connect">Lütfen bağlantınızı kontrol edin</string>
    <string name="xml_connect_retry">Tekrar Dene</string>
    <string name="xml_not_email_verified">E-posta Doğrulanmadı</string>
    <string name="xml_verify_email">Lütfen şimdi e-postanızı doğrulayın. E-posta doğrulaması yapmadan giriş yapamazsınız.</string>
    <string name="xml_continue">Devam Et</string>
    <string name="no_order_delivery">Teslim Durumunda Sipariş Yok</string>
    <string name="xml_categories_name">Kategoriler</string>
    <string name="xml_feature_name">Öne Çıkanlar</string>
    <string name="xml_popular_name">Popüler</string>
    <string name="xml_see_name">Hepsini Gör</string>
    <string name="xml_empty_name">Boş</string>
    <string name="xml_no_order_name">Şuan da Hiçbir Siparişiniz Yok!</string>
    <string name="xml_start_shopping">ŞİMDİ ALIŞVERİŞE BAŞLA</string>
    <string name="xml_my_home_name">Evim</string>
    <string name="xml_total_amount">Toplam Tutar :</string>
    <string name="xml_update_email_name">E-Postanızı Güncelleyin</string>
    <string name="xml_current_email_name">Mevcut E-Mail</string>
    <string name="xml_current_password">Mevcut Şifre</string>
    <string name="xml_new_email_name">Yeni E-Mail Adresiniz</string>
    <string name="xml_update_email_name_button">Güncelle</string>
    <string name="update_email_activity_something">Bir şeyler yanlış gitti!</string>
    <string name="update_email_activity_need_pass">Devam etmek için şifre gerekli</string>
    <string name="update_email_activity_need_auth">Kimlik doğrulama için lütfen şifrenizi girin</string>
    <string name="update_email_activity_pass_auth">Şifre doğrulandı</string>
    <string name="update_email_activity_email_update"> Artık e-postayı güncelleyebilirsiniz</string>
    <string name="update_email_activity_new_email">Yeni E-posta gerekli</string>
    <string name="update_email_activity_req_email">Lütfen yeni e-posta girin</string>
    <string name="update_email_activity_valid_email">Lütfen geçerli bir E-posta girin</string>
    <string name="update_email_activity_new_old_email">Yeni E-posta eski E-postayla aynı olamaz</string>
    <string name="update_email_activity_enter_new_email">Lütfen yeni E-posta girin </string>
    <string name="update_email_activity_new_old_update_email">E-posta güncellendi. Lütfen yeni e-posta adresinizi doğrulayın</string>
    <string name="xml_language_name">Dil</string>
    <string name="xml_language_name_desc">Türkçe</string>
    <string name="xml_currency_name">Para Birimi</string>
    <string name="xml_notification_name">Bildirimler</string>
    <string name="xml_not_desc">Açık</string>
    <string name="xml_terms_condit">Şartlar ve Koşullar</string>
</resources>