<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_bg"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/messageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="@string/xml_not_email_verified"
            android:textColor="#10275A"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/messageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="@string/xml_verify_email"
            android:textColor="#10275A"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/main_button"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/xml_continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"

            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>