<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:background="@drawable/forgot_password_bg"
    >


    <TextView
        android:id="@+id/changePasswordHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/xml_new_pass_head"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText_password_current"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/main_edittext"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/xml_pass_name"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordHead" />

    <Button
        android:id="@+id/button_authenticate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/black_main_button"
        android:text="@string/xml_auth_name"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_semibold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editText_password_current"
        app:layout_constraintStart_toStartOf="@+id/editText_password_current"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_current" />


    <EditText
        android:id="@+id/editText_password_new"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/main_edittext"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/xml_pass_new_name"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_authenticate" />

    <EditText
        android:id="@+id/editText_password_new_confirm"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/main_edittext"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/xml_pass_new_name_again"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_new" />

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/black_main_button"
        android:text="@string/xml_pass_change_name"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_semibold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editText_password_new_confirm"
        app:layout_constraintStart_toStartOf="@+id/editText_password_new_confirm"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_new_confirm" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="#707070"
        android:elevation="10dp"
        android:visibility="gone"
        />



</androidx.constraintlayout.widget.ConstraintLayout>